// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Widget should render the component correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Widget
    columns={3}
    company={
      Object {
        "id": "wttj",
        "logo": "logo-wttj.png",
        "name": "Welcome to the jungle",
      }
    }
    content={
      Array [
        Object {
          "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1480/151603/small_wttj_video_0679859b-6e84-4549-bbc4-1330eddcac57.jpg",
          "subtitle": "Co-Founder",
          "title": "Bertrand Uzeel",
          "type": "video",
        },
        Object {
          "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7269/151601/small_wttj-annonces_583853d2-7b7d-4827-beb6-005c9c814df7.jpg",
          "type": "picture",
        },
        Object {
          "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7220/151601/small_wttj-annonces_fde76898-d6a4-4540-af78-f26ec06ba201.jpg",
          "type": "picture",
        },
        Object {
          "text": "Life is short, work somewhere awesome.",
          "type": "quote",
        },
        Object {
          "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7252/151601/small_wttj-jobs_b3bbd3a7-0c09-403a-a446-9f29d0b09c3f.jpg",
          "type": "picture",
        },
        Object {
          "caption": "https://cdn.welcometothejungle.co/uploads/video/image/9401/151602/small_wttj_video_3bbaeeb9-2f2f-4a1b-ac14-e6be495d3bb4.jpg",
          "subtitle": "Sales Development Manager",
          "title": "Mélanie Babinot",
          "type": "video",
        },
        Object {
          "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7266/151601/small_wttj-annonces_296b33a2-ae75-439f-82fa-25d75fff45ae.jpg",
          "type": "picture",
        },
        Object {
          "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7242/151601/small_wttj-inside_06571833-82ab-42e7-8fe2-0f004ecf79c8.jpg",
          "type": "picture",
        },
        Object {
          "text": "C’est pas faux !",
          "type": "quote",
        },
        Object {
          "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1540/151603/small_wttj_video_267f7b56-911e-4888-9721-085e83f9f479.jpg",
          "subtitle": "CTO",
          "title": "Kevin Le Roy",
          "type": "video",
        },
        Object {
          "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7223/151601/small_wttj-jobs_360f6eb8-26e1-42aa-a3ee-837c3767b734.jpg",
          "type": "picture",
        },
        Object {
          "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1702/151603/small_wttj_video_c9575808-fd3a-4571-95ef-873af73be887.jpg",
          "subtitle": "Head of production",
          "title": "Anne-Claire",
          "type": "video",
        },
        Object {
          "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7206/151601/small_wttj-offres-emploi_170aa579-aa26-4cf8-838c-9d68d4da6c32.jpg",
          "type": "picture",
        },
      ]
    }
    rows={2}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Header
          handleNext={[Function]}
          handlePrev={[Function]}
          logo="logo-wttj.png"
          maxStep={4}
          name="Welcome to the jungle"
          step={0}
        />,
        <ForwardRef
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          <Slider
            content={
              Array [
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1480/151603/small_wttj_video_0679859b-6e84-4549-bbc4-1330eddcac57.jpg",
                  "subtitle": "Co-Founder",
                  "title": "Bertrand Uzeel",
                  "type": "video",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7269/151601/small_wttj-annonces_583853d2-7b7d-4827-beb6-005c9c814df7.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7220/151601/small_wttj-annonces_fde76898-d6a4-4540-af78-f26ec06ba201.jpg",
                  "type": "picture",
                },
                Object {
                  "text": "Life is short, work somewhere awesome.",
                  "type": "quote",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7252/151601/small_wttj-jobs_b3bbd3a7-0c09-403a-a446-9f29d0b09c3f.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/video/image/9401/151602/small_wttj_video_3bbaeeb9-2f2f-4a1b-ac14-e6be495d3bb4.jpg",
                  "subtitle": "Sales Development Manager",
                  "title": "Mélanie Babinot",
                  "type": "video",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7266/151601/small_wttj-annonces_296b33a2-ae75-439f-82fa-25d75fff45ae.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7242/151601/small_wttj-inside_06571833-82ab-42e7-8fe2-0f004ecf79c8.jpg",
                  "type": "picture",
                },
                Object {
                  "text": "C’est pas faux !",
                  "type": "quote",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1540/151603/small_wttj_video_267f7b56-911e-4888-9721-085e83f9f479.jpg",
                  "subtitle": "CTO",
                  "title": "Kevin Le Roy",
                  "type": "video",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7223/151601/small_wttj-jobs_360f6eb8-26e1-42aa-a3ee-837c3767b734.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1702/151603/small_wttj_video_c9575808-fd3a-4571-95ef-873af73be887.jpg",
                  "subtitle": "Head of production",
                  "title": "Anne-Claire",
                  "type": "video",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7206/151601/small_wttj-offres-emploi_170aa579-aa26-4cf8-838c-9d68d4da6c32.jpg",
                  "type": "picture",
                },
              ]
            }
            contentWidth={0}
            id="wttj"
            refSlider={
              Object {
                "current": null,
              }
            }
            step={0}
            translateScroll={0}
            width={0}
          />
        </ForwardRef>,
        <ProgressBar
          progress={42.857142857142854}
        />,
        <Footer
          id="wttj"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "handleNext": [Function],
          "handlePrev": [Function],
          "logo": "logo-wttj.png",
          "maxStep": 4,
          "name": "Welcome to the jungle",
          "step": 0,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <Slider
            content={
              Array [
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1480/151603/small_wttj_video_0679859b-6e84-4549-bbc4-1330eddcac57.jpg",
                  "subtitle": "Co-Founder",
                  "title": "Bertrand Uzeel",
                  "type": "video",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7269/151601/small_wttj-annonces_583853d2-7b7d-4827-beb6-005c9c814df7.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7220/151601/small_wttj-annonces_fde76898-d6a4-4540-af78-f26ec06ba201.jpg",
                  "type": "picture",
                },
                Object {
                  "text": "Life is short, work somewhere awesome.",
                  "type": "quote",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7252/151601/small_wttj-jobs_b3bbd3a7-0c09-403a-a446-9f29d0b09c3f.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/video/image/9401/151602/small_wttj_video_3bbaeeb9-2f2f-4a1b-ac14-e6be495d3bb4.jpg",
                  "subtitle": "Sales Development Manager",
                  "title": "Mélanie Babinot",
                  "type": "video",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7266/151601/small_wttj-annonces_296b33a2-ae75-439f-82fa-25d75fff45ae.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7242/151601/small_wttj-inside_06571833-82ab-42e7-8fe2-0f004ecf79c8.jpg",
                  "type": "picture",
                },
                Object {
                  "text": "C’est pas faux !",
                  "type": "quote",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1540/151603/small_wttj_video_267f7b56-911e-4888-9721-085e83f9f479.jpg",
                  "subtitle": "CTO",
                  "title": "Kevin Le Roy",
                  "type": "video",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7223/151601/small_wttj-jobs_360f6eb8-26e1-42aa-a3ee-837c3767b734.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1702/151603/small_wttj_video_c9575808-fd3a-4571-95ef-873af73be887.jpg",
                  "subtitle": "Head of production",
                  "title": "Anne-Claire",
                  "type": "video",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7206/151601/small_wttj-offres-emploi_170aa579-aa26-4cf8-838c-9d68d4da6c32.jpg",
                  "type": "picture",
                },
              ]
            }
            contentWidth={0}
            id="wttj"
            refSlider={
              Object {
                "current": null,
              }
            }
            step={0}
            translateScroll={0}
            width={0}
          />,
          "onTouchMove": [Function],
          "onTouchStart": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "content": Array [
              Object {
                "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1480/151603/small_wttj_video_0679859b-6e84-4549-bbc4-1330eddcac57.jpg",
                "subtitle": "Co-Founder",
                "title": "Bertrand Uzeel",
                "type": "video",
              },
              Object {
                "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7269/151601/small_wttj-annonces_583853d2-7b7d-4827-beb6-005c9c814df7.jpg",
                "type": "picture",
              },
              Object {
                "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7220/151601/small_wttj-annonces_fde76898-d6a4-4540-af78-f26ec06ba201.jpg",
                "type": "picture",
              },
              Object {
                "text": "Life is short, work somewhere awesome.",
                "type": "quote",
              },
              Object {
                "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7252/151601/small_wttj-jobs_b3bbd3a7-0c09-403a-a446-9f29d0b09c3f.jpg",
                "type": "picture",
              },
              Object {
                "caption": "https://cdn.welcometothejungle.co/uploads/video/image/9401/151602/small_wttj_video_3bbaeeb9-2f2f-4a1b-ac14-e6be495d3bb4.jpg",
                "subtitle": "Sales Development Manager",
                "title": "Mélanie Babinot",
                "type": "video",
              },
              Object {
                "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7266/151601/small_wttj-annonces_296b33a2-ae75-439f-82fa-25d75fff45ae.jpg",
                "type": "picture",
              },
              Object {
                "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7242/151601/small_wttj-inside_06571833-82ab-42e7-8fe2-0f004ecf79c8.jpg",
                "type": "picture",
              },
              Object {
                "text": "C’est pas faux !",
                "type": "quote",
              },
              Object {
                "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1540/151603/small_wttj_video_267f7b56-911e-4888-9721-085e83f9f479.jpg",
                "subtitle": "CTO",
                "title": "Kevin Le Roy",
                "type": "video",
              },
              Object {
                "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7223/151601/small_wttj-jobs_360f6eb8-26e1-42aa-a3ee-837c3767b734.jpg",
                "type": "picture",
              },
              Object {
                "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1702/151603/small_wttj_video_c9575808-fd3a-4571-95ef-873af73be887.jpg",
                "subtitle": "Head of production",
                "title": "Anne-Claire",
                "type": "video",
              },
              Object {
                "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7206/151601/small_wttj-offres-emploi_170aa579-aa26-4cf8-838c-9d68d4da6c32.jpg",
                "type": "picture",
              },
            ],
            "contentWidth": 0,
            "id": "wttj",
            "refSlider": Object {
              "current": null,
            },
            "step": 0,
            "translateScroll": 0,
            "width": 0,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-jKJlTe",
            "isStatic": true,
            "rules": Array [
              "
  flex: 1;
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-jKJlTe",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "progress": 42.857142857142854,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "id": "wttj",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-ckVGcZ",
        "isStatic": true,
        "rules": Array [
          "
  border-radius: 6px;
  font-family: \\"Roboto Condensed\\", sans-serif;
  color: ",
          "#31333b",
          ";
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
",
        ],
      },
      "displayName": "styled.div",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-ckVGcZ",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Header
            handleNext={[Function]}
            handlePrev={[Function]}
            logo="logo-wttj.png"
            maxStep={4}
            name="Welcome to the jungle"
            step={0}
          />,
          <ForwardRef
            onTouchMove={[Function]}
            onTouchStart={[Function]}
          >
            <Slider
              content={
                Array [
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1480/151603/small_wttj_video_0679859b-6e84-4549-bbc4-1330eddcac57.jpg",
                    "subtitle": "Co-Founder",
                    "title": "Bertrand Uzeel",
                    "type": "video",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7269/151601/small_wttj-annonces_583853d2-7b7d-4827-beb6-005c9c814df7.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7220/151601/small_wttj-annonces_fde76898-d6a4-4540-af78-f26ec06ba201.jpg",
                    "type": "picture",
                  },
                  Object {
                    "text": "Life is short, work somewhere awesome.",
                    "type": "quote",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7252/151601/small_wttj-jobs_b3bbd3a7-0c09-403a-a446-9f29d0b09c3f.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/video/image/9401/151602/small_wttj_video_3bbaeeb9-2f2f-4a1b-ac14-e6be495d3bb4.jpg",
                    "subtitle": "Sales Development Manager",
                    "title": "Mélanie Babinot",
                    "type": "video",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7266/151601/small_wttj-annonces_296b33a2-ae75-439f-82fa-25d75fff45ae.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7242/151601/small_wttj-inside_06571833-82ab-42e7-8fe2-0f004ecf79c8.jpg",
                    "type": "picture",
                  },
                  Object {
                    "text": "C’est pas faux !",
                    "type": "quote",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1540/151603/small_wttj_video_267f7b56-911e-4888-9721-085e83f9f479.jpg",
                    "subtitle": "CTO",
                    "title": "Kevin Le Roy",
                    "type": "video",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7223/151601/small_wttj-jobs_360f6eb8-26e1-42aa-a3ee-837c3767b734.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1702/151603/small_wttj_video_c9575808-fd3a-4571-95ef-873af73be887.jpg",
                    "subtitle": "Head of production",
                    "title": "Anne-Claire",
                    "type": "video",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7206/151601/small_wttj-offres-emploi_170aa579-aa26-4cf8-838c-9d68d4da6c32.jpg",
                    "type": "picture",
                  },
                ]
              }
              contentWidth={0}
              id="wttj"
              refSlider={
                Object {
                  "current": null,
                }
              }
              step={0}
              translateScroll={0}
              width={0}
            />
          </ForwardRef>,
          <ProgressBar
            progress={42.857142857142854}
          />,
          <Footer
            id="wttj"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "handleNext": [Function],
            "handlePrev": [Function],
            "logo": "logo-wttj.png",
            "maxStep": 4,
            "name": "Welcome to the jungle",
            "step": 0,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <Slider
              content={
                Array [
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1480/151603/small_wttj_video_0679859b-6e84-4549-bbc4-1330eddcac57.jpg",
                    "subtitle": "Co-Founder",
                    "title": "Bertrand Uzeel",
                    "type": "video",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7269/151601/small_wttj-annonces_583853d2-7b7d-4827-beb6-005c9c814df7.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7220/151601/small_wttj-annonces_fde76898-d6a4-4540-af78-f26ec06ba201.jpg",
                    "type": "picture",
                  },
                  Object {
                    "text": "Life is short, work somewhere awesome.",
                    "type": "quote",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7252/151601/small_wttj-jobs_b3bbd3a7-0c09-403a-a446-9f29d0b09c3f.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/video/image/9401/151602/small_wttj_video_3bbaeeb9-2f2f-4a1b-ac14-e6be495d3bb4.jpg",
                    "subtitle": "Sales Development Manager",
                    "title": "Mélanie Babinot",
                    "type": "video",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7266/151601/small_wttj-annonces_296b33a2-ae75-439f-82fa-25d75fff45ae.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7242/151601/small_wttj-inside_06571833-82ab-42e7-8fe2-0f004ecf79c8.jpg",
                    "type": "picture",
                  },
                  Object {
                    "text": "C’est pas faux !",
                    "type": "quote",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1540/151603/small_wttj_video_267f7b56-911e-4888-9721-085e83f9f479.jpg",
                    "subtitle": "CTO",
                    "title": "Kevin Le Roy",
                    "type": "video",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7223/151601/small_wttj-jobs_360f6eb8-26e1-42aa-a3ee-837c3767b734.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1702/151603/small_wttj_video_c9575808-fd3a-4571-95ef-873af73be887.jpg",
                    "subtitle": "Head of production",
                    "title": "Anne-Claire",
                    "type": "video",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7206/151601/small_wttj-offres-emploi_170aa579-aa26-4cf8-838c-9d68d4da6c32.jpg",
                    "type": "picture",
                  },
                ]
              }
              contentWidth={0}
              id="wttj"
              refSlider={
                Object {
                  "current": null,
                }
              }
              step={0}
              translateScroll={0}
              width={0}
            />,
            "onTouchMove": [Function],
            "onTouchStart": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "content": Array [
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1480/151603/small_wttj_video_0679859b-6e84-4549-bbc4-1330eddcac57.jpg",
                  "subtitle": "Co-Founder",
                  "title": "Bertrand Uzeel",
                  "type": "video",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7269/151601/small_wttj-annonces_583853d2-7b7d-4827-beb6-005c9c814df7.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7220/151601/small_wttj-annonces_fde76898-d6a4-4540-af78-f26ec06ba201.jpg",
                  "type": "picture",
                },
                Object {
                  "text": "Life is short, work somewhere awesome.",
                  "type": "quote",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7252/151601/small_wttj-jobs_b3bbd3a7-0c09-403a-a446-9f29d0b09c3f.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/video/image/9401/151602/small_wttj_video_3bbaeeb9-2f2f-4a1b-ac14-e6be495d3bb4.jpg",
                  "subtitle": "Sales Development Manager",
                  "title": "Mélanie Babinot",
                  "type": "video",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7266/151601/small_wttj-annonces_296b33a2-ae75-439f-82fa-25d75fff45ae.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7242/151601/small_wttj-inside_06571833-82ab-42e7-8fe2-0f004ecf79c8.jpg",
                  "type": "picture",
                },
                Object {
                  "text": "C’est pas faux !",
                  "type": "quote",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1540/151603/small_wttj_video_267f7b56-911e-4888-9721-085e83f9f479.jpg",
                  "subtitle": "CTO",
                  "title": "Kevin Le Roy",
                  "type": "video",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7223/151601/small_wttj-jobs_360f6eb8-26e1-42aa-a3ee-837c3767b734.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1702/151603/small_wttj_video_c9575808-fd3a-4571-95ef-873af73be887.jpg",
                  "subtitle": "Head of production",
                  "title": "Anne-Claire",
                  "type": "video",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7206/151601/small_wttj-offres-emploi_170aa579-aa26-4cf8-838c-9d68d4da6c32.jpg",
                  "type": "picture",
                },
              ],
              "contentWidth": 0,
              "id": "wttj",
              "refSlider": Object {
                "current": null,
              },
              "step": 0,
              "translateScroll": 0,
              "width": 0,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-jKJlTe",
              "isStatic": true,
              "rules": Array [
                "
  flex: 1;
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-jKJlTe",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "progress": 42.857142857142854,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "id": "wttj",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-ckVGcZ",
          "isStatic": true,
          "rules": Array [
            "
  border-radius: 6px;
  font-family: \\"Roboto Condensed\\", sans-serif;
  color: ",
            "#31333b",
            ";
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
",
          ],
        },
        "displayName": "styled.div",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-ckVGcZ",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Widget should render the component correctly for mobile 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Widget
    columns={3}
    company={
      Object {
        "id": "wttj",
        "logo": "logo-wttj.png",
        "name": "Welcome to the jungle",
      }
    }
    content={
      Array [
        Object {
          "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1480/151603/small_wttj_video_0679859b-6e84-4549-bbc4-1330eddcac57.jpg",
          "subtitle": "Co-Founder",
          "title": "Bertrand Uzeel",
          "type": "video",
        },
        Object {
          "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7269/151601/small_wttj-annonces_583853d2-7b7d-4827-beb6-005c9c814df7.jpg",
          "type": "picture",
        },
        Object {
          "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7220/151601/small_wttj-annonces_fde76898-d6a4-4540-af78-f26ec06ba201.jpg",
          "type": "picture",
        },
        Object {
          "text": "Life is short, work somewhere awesome.",
          "type": "quote",
        },
        Object {
          "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7252/151601/small_wttj-jobs_b3bbd3a7-0c09-403a-a446-9f29d0b09c3f.jpg",
          "type": "picture",
        },
        Object {
          "caption": "https://cdn.welcometothejungle.co/uploads/video/image/9401/151602/small_wttj_video_3bbaeeb9-2f2f-4a1b-ac14-e6be495d3bb4.jpg",
          "subtitle": "Sales Development Manager",
          "title": "Mélanie Babinot",
          "type": "video",
        },
        Object {
          "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7266/151601/small_wttj-annonces_296b33a2-ae75-439f-82fa-25d75fff45ae.jpg",
          "type": "picture",
        },
        Object {
          "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7242/151601/small_wttj-inside_06571833-82ab-42e7-8fe2-0f004ecf79c8.jpg",
          "type": "picture",
        },
        Object {
          "text": "C’est pas faux !",
          "type": "quote",
        },
        Object {
          "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1540/151603/small_wttj_video_267f7b56-911e-4888-9721-085e83f9f479.jpg",
          "subtitle": "CTO",
          "title": "Kevin Le Roy",
          "type": "video",
        },
        Object {
          "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7223/151601/small_wttj-jobs_360f6eb8-26e1-42aa-a3ee-837c3767b734.jpg",
          "type": "picture",
        },
        Object {
          "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1702/151603/small_wttj_video_c9575808-fd3a-4571-95ef-873af73be887.jpg",
          "subtitle": "Head of production",
          "title": "Anne-Claire",
          "type": "video",
        },
        Object {
          "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7206/151601/small_wttj-offres-emploi_170aa579-aa26-4cf8-838c-9d68d4da6c32.jpg",
          "type": "picture",
        },
      ]
    }
    rows={2}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Header
          handleNext={[Function]}
          handlePrev={[Function]}
          logo="logo-wttj.png"
          maxStep={6}
          name="Welcome to the jungle"
          step={0}
        />,
        <ForwardRef
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          <Slider
            content={
              Array [
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1480/151603/small_wttj_video_0679859b-6e84-4549-bbc4-1330eddcac57.jpg",
                  "subtitle": "Co-Founder",
                  "title": "Bertrand Uzeel",
                  "type": "video",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7269/151601/small_wttj-annonces_583853d2-7b7d-4827-beb6-005c9c814df7.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7220/151601/small_wttj-annonces_fde76898-d6a4-4540-af78-f26ec06ba201.jpg",
                  "type": "picture",
                },
                Object {
                  "text": "Life is short, work somewhere awesome.",
                  "type": "quote",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7252/151601/small_wttj-jobs_b3bbd3a7-0c09-403a-a446-9f29d0b09c3f.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/video/image/9401/151602/small_wttj_video_3bbaeeb9-2f2f-4a1b-ac14-e6be495d3bb4.jpg",
                  "subtitle": "Sales Development Manager",
                  "title": "Mélanie Babinot",
                  "type": "video",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7266/151601/small_wttj-annonces_296b33a2-ae75-439f-82fa-25d75fff45ae.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7242/151601/small_wttj-inside_06571833-82ab-42e7-8fe2-0f004ecf79c8.jpg",
                  "type": "picture",
                },
                Object {
                  "text": "C’est pas faux !",
                  "type": "quote",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1540/151603/small_wttj_video_267f7b56-911e-4888-9721-085e83f9f479.jpg",
                  "subtitle": "CTO",
                  "title": "Kevin Le Roy",
                  "type": "video",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7223/151601/small_wttj-jobs_360f6eb8-26e1-42aa-a3ee-837c3767b734.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1702/151603/small_wttj_video_c9575808-fd3a-4571-95ef-873af73be887.jpg",
                  "subtitle": "Head of production",
                  "title": "Anne-Claire",
                  "type": "video",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7206/151601/small_wttj-offres-emploi_170aa579-aa26-4cf8-838c-9d68d4da6c32.jpg",
                  "type": "picture",
                },
              ]
            }
            contentWidth={null}
            id="wttj"
            refSlider={
              Object {
                "current": null,
              }
            }
            step={0}
            translateScroll={0}
            width={0}
          />
        </ForwardRef>,
        <ProgressBar
          progress={14.285714285714285}
        />,
        <Footer
          id="wttj"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "handleNext": [Function],
          "handlePrev": [Function],
          "logo": "logo-wttj.png",
          "maxStep": 6,
          "name": "Welcome to the jungle",
          "step": 0,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <Slider
            content={
              Array [
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1480/151603/small_wttj_video_0679859b-6e84-4549-bbc4-1330eddcac57.jpg",
                  "subtitle": "Co-Founder",
                  "title": "Bertrand Uzeel",
                  "type": "video",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7269/151601/small_wttj-annonces_583853d2-7b7d-4827-beb6-005c9c814df7.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7220/151601/small_wttj-annonces_fde76898-d6a4-4540-af78-f26ec06ba201.jpg",
                  "type": "picture",
                },
                Object {
                  "text": "Life is short, work somewhere awesome.",
                  "type": "quote",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7252/151601/small_wttj-jobs_b3bbd3a7-0c09-403a-a446-9f29d0b09c3f.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/video/image/9401/151602/small_wttj_video_3bbaeeb9-2f2f-4a1b-ac14-e6be495d3bb4.jpg",
                  "subtitle": "Sales Development Manager",
                  "title": "Mélanie Babinot",
                  "type": "video",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7266/151601/small_wttj-annonces_296b33a2-ae75-439f-82fa-25d75fff45ae.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7242/151601/small_wttj-inside_06571833-82ab-42e7-8fe2-0f004ecf79c8.jpg",
                  "type": "picture",
                },
                Object {
                  "text": "C’est pas faux !",
                  "type": "quote",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1540/151603/small_wttj_video_267f7b56-911e-4888-9721-085e83f9f479.jpg",
                  "subtitle": "CTO",
                  "title": "Kevin Le Roy",
                  "type": "video",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7223/151601/small_wttj-jobs_360f6eb8-26e1-42aa-a3ee-837c3767b734.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1702/151603/small_wttj_video_c9575808-fd3a-4571-95ef-873af73be887.jpg",
                  "subtitle": "Head of production",
                  "title": "Anne-Claire",
                  "type": "video",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7206/151601/small_wttj-offres-emploi_170aa579-aa26-4cf8-838c-9d68d4da6c32.jpg",
                  "type": "picture",
                },
              ]
            }
            contentWidth={null}
            id="wttj"
            refSlider={
              Object {
                "current": null,
              }
            }
            step={0}
            translateScroll={0}
            width={0}
          />,
          "onTouchMove": [Function],
          "onTouchStart": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "content": Array [
              Object {
                "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1480/151603/small_wttj_video_0679859b-6e84-4549-bbc4-1330eddcac57.jpg",
                "subtitle": "Co-Founder",
                "title": "Bertrand Uzeel",
                "type": "video",
              },
              Object {
                "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7269/151601/small_wttj-annonces_583853d2-7b7d-4827-beb6-005c9c814df7.jpg",
                "type": "picture",
              },
              Object {
                "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7220/151601/small_wttj-annonces_fde76898-d6a4-4540-af78-f26ec06ba201.jpg",
                "type": "picture",
              },
              Object {
                "text": "Life is short, work somewhere awesome.",
                "type": "quote",
              },
              Object {
                "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7252/151601/small_wttj-jobs_b3bbd3a7-0c09-403a-a446-9f29d0b09c3f.jpg",
                "type": "picture",
              },
              Object {
                "caption": "https://cdn.welcometothejungle.co/uploads/video/image/9401/151602/small_wttj_video_3bbaeeb9-2f2f-4a1b-ac14-e6be495d3bb4.jpg",
                "subtitle": "Sales Development Manager",
                "title": "Mélanie Babinot",
                "type": "video",
              },
              Object {
                "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7266/151601/small_wttj-annonces_296b33a2-ae75-439f-82fa-25d75fff45ae.jpg",
                "type": "picture",
              },
              Object {
                "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7242/151601/small_wttj-inside_06571833-82ab-42e7-8fe2-0f004ecf79c8.jpg",
                "type": "picture",
              },
              Object {
                "text": "C’est pas faux !",
                "type": "quote",
              },
              Object {
                "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1540/151603/small_wttj_video_267f7b56-911e-4888-9721-085e83f9f479.jpg",
                "subtitle": "CTO",
                "title": "Kevin Le Roy",
                "type": "video",
              },
              Object {
                "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7223/151601/small_wttj-jobs_360f6eb8-26e1-42aa-a3ee-837c3767b734.jpg",
                "type": "picture",
              },
              Object {
                "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1702/151603/small_wttj_video_c9575808-fd3a-4571-95ef-873af73be887.jpg",
                "subtitle": "Head of production",
                "title": "Anne-Claire",
                "type": "video",
              },
              Object {
                "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7206/151601/small_wttj-offres-emploi_170aa579-aa26-4cf8-838c-9d68d4da6c32.jpg",
                "type": "picture",
              },
            ],
            "contentWidth": null,
            "id": "wttj",
            "refSlider": Object {
              "current": null,
            },
            "step": 0,
            "translateScroll": 0,
            "width": 0,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-jKJlTe",
            "isStatic": true,
            "rules": Array [
              "
  flex: 1;
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-jKJlTe",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "progress": 14.285714285714285,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "id": "wttj",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-ckVGcZ",
        "isStatic": true,
        "rules": Array [
          "
  border-radius: 6px;
  font-family: \\"Roboto Condensed\\", sans-serif;
  color: ",
          "#31333b",
          ";
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
",
        ],
      },
      "displayName": "styled.div",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-ckVGcZ",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Header
            handleNext={[Function]}
            handlePrev={[Function]}
            logo="logo-wttj.png"
            maxStep={6}
            name="Welcome to the jungle"
            step={0}
          />,
          <ForwardRef
            onTouchMove={[Function]}
            onTouchStart={[Function]}
          >
            <Slider
              content={
                Array [
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1480/151603/small_wttj_video_0679859b-6e84-4549-bbc4-1330eddcac57.jpg",
                    "subtitle": "Co-Founder",
                    "title": "Bertrand Uzeel",
                    "type": "video",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7269/151601/small_wttj-annonces_583853d2-7b7d-4827-beb6-005c9c814df7.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7220/151601/small_wttj-annonces_fde76898-d6a4-4540-af78-f26ec06ba201.jpg",
                    "type": "picture",
                  },
                  Object {
                    "text": "Life is short, work somewhere awesome.",
                    "type": "quote",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7252/151601/small_wttj-jobs_b3bbd3a7-0c09-403a-a446-9f29d0b09c3f.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/video/image/9401/151602/small_wttj_video_3bbaeeb9-2f2f-4a1b-ac14-e6be495d3bb4.jpg",
                    "subtitle": "Sales Development Manager",
                    "title": "Mélanie Babinot",
                    "type": "video",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7266/151601/small_wttj-annonces_296b33a2-ae75-439f-82fa-25d75fff45ae.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7242/151601/small_wttj-inside_06571833-82ab-42e7-8fe2-0f004ecf79c8.jpg",
                    "type": "picture",
                  },
                  Object {
                    "text": "C’est pas faux !",
                    "type": "quote",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1540/151603/small_wttj_video_267f7b56-911e-4888-9721-085e83f9f479.jpg",
                    "subtitle": "CTO",
                    "title": "Kevin Le Roy",
                    "type": "video",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7223/151601/small_wttj-jobs_360f6eb8-26e1-42aa-a3ee-837c3767b734.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1702/151603/small_wttj_video_c9575808-fd3a-4571-95ef-873af73be887.jpg",
                    "subtitle": "Head of production",
                    "title": "Anne-Claire",
                    "type": "video",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7206/151601/small_wttj-offres-emploi_170aa579-aa26-4cf8-838c-9d68d4da6c32.jpg",
                    "type": "picture",
                  },
                ]
              }
              contentWidth={null}
              id="wttj"
              refSlider={
                Object {
                  "current": null,
                }
              }
              step={0}
              translateScroll={0}
              width={0}
            />
          </ForwardRef>,
          <ProgressBar
            progress={14.285714285714285}
          />,
          <Footer
            id="wttj"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "handleNext": [Function],
            "handlePrev": [Function],
            "logo": "logo-wttj.png",
            "maxStep": 6,
            "name": "Welcome to the jungle",
            "step": 0,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <Slider
              content={
                Array [
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1480/151603/small_wttj_video_0679859b-6e84-4549-bbc4-1330eddcac57.jpg",
                    "subtitle": "Co-Founder",
                    "title": "Bertrand Uzeel",
                    "type": "video",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7269/151601/small_wttj-annonces_583853d2-7b7d-4827-beb6-005c9c814df7.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7220/151601/small_wttj-annonces_fde76898-d6a4-4540-af78-f26ec06ba201.jpg",
                    "type": "picture",
                  },
                  Object {
                    "text": "Life is short, work somewhere awesome.",
                    "type": "quote",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7252/151601/small_wttj-jobs_b3bbd3a7-0c09-403a-a446-9f29d0b09c3f.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/video/image/9401/151602/small_wttj_video_3bbaeeb9-2f2f-4a1b-ac14-e6be495d3bb4.jpg",
                    "subtitle": "Sales Development Manager",
                    "title": "Mélanie Babinot",
                    "type": "video",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7266/151601/small_wttj-annonces_296b33a2-ae75-439f-82fa-25d75fff45ae.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7242/151601/small_wttj-inside_06571833-82ab-42e7-8fe2-0f004ecf79c8.jpg",
                    "type": "picture",
                  },
                  Object {
                    "text": "C’est pas faux !",
                    "type": "quote",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1540/151603/small_wttj_video_267f7b56-911e-4888-9721-085e83f9f479.jpg",
                    "subtitle": "CTO",
                    "title": "Kevin Le Roy",
                    "type": "video",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7223/151601/small_wttj-jobs_360f6eb8-26e1-42aa-a3ee-837c3767b734.jpg",
                    "type": "picture",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1702/151603/small_wttj_video_c9575808-fd3a-4571-95ef-873af73be887.jpg",
                    "subtitle": "Head of production",
                    "title": "Anne-Claire",
                    "type": "video",
                  },
                  Object {
                    "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7206/151601/small_wttj-offres-emploi_170aa579-aa26-4cf8-838c-9d68d4da6c32.jpg",
                    "type": "picture",
                  },
                ]
              }
              contentWidth={null}
              id="wttj"
              refSlider={
                Object {
                  "current": null,
                }
              }
              step={0}
              translateScroll={0}
              width={0}
            />,
            "onTouchMove": [Function],
            "onTouchStart": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "content": Array [
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1480/151603/small_wttj_video_0679859b-6e84-4549-bbc4-1330eddcac57.jpg",
                  "subtitle": "Co-Founder",
                  "title": "Bertrand Uzeel",
                  "type": "video",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7269/151601/small_wttj-annonces_583853d2-7b7d-4827-beb6-005c9c814df7.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7220/151601/small_wttj-annonces_fde76898-d6a4-4540-af78-f26ec06ba201.jpg",
                  "type": "picture",
                },
                Object {
                  "text": "Life is short, work somewhere awesome.",
                  "type": "quote",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7252/151601/small_wttj-jobs_b3bbd3a7-0c09-403a-a446-9f29d0b09c3f.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/video/image/9401/151602/small_wttj_video_3bbaeeb9-2f2f-4a1b-ac14-e6be495d3bb4.jpg",
                  "subtitle": "Sales Development Manager",
                  "title": "Mélanie Babinot",
                  "type": "video",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7266/151601/small_wttj-annonces_296b33a2-ae75-439f-82fa-25d75fff45ae.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7242/151601/small_wttj-inside_06571833-82ab-42e7-8fe2-0f004ecf79c8.jpg",
                  "type": "picture",
                },
                Object {
                  "text": "C’est pas faux !",
                  "type": "quote",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1540/151603/small_wttj_video_267f7b56-911e-4888-9721-085e83f9f479.jpg",
                  "subtitle": "CTO",
                  "title": "Kevin Le Roy",
                  "type": "video",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7223/151601/small_wttj-jobs_360f6eb8-26e1-42aa-a3ee-837c3767b734.jpg",
                  "type": "picture",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/video/image/1702/151603/small_wttj_video_c9575808-fd3a-4571-95ef-873af73be887.jpg",
                  "subtitle": "Head of production",
                  "title": "Anne-Claire",
                  "type": "video",
                },
                Object {
                  "caption": "https://cdn.welcometothejungle.co/uploads/image/file/7206/151601/small_wttj-offres-emploi_170aa579-aa26-4cf8-838c-9d68d4da6c32.jpg",
                  "type": "picture",
                },
              ],
              "contentWidth": null,
              "id": "wttj",
              "refSlider": Object {
                "current": null,
              },
              "step": 0,
              "translateScroll": 0,
              "width": 0,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-jKJlTe",
              "isStatic": true,
              "rules": Array [
                "
  flex: 1;
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-jKJlTe",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "progress": 14.285714285714285,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "id": "wttj",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-ckVGcZ",
          "isStatic": true,
          "rules": Array [
            "
  border-radius: 6px;
  font-family: \\"Roboto Condensed\\", sans-serif;
  color: ",
            "#31333b",
            ";
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
",
          ],
        },
        "displayName": "styled.div",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-ckVGcZ",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
